--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
         <a href="{{url_for('details_page')}}">Details</a>
         {%block altriLink%}{%endblock%}
     </nav>
+
+    {%block contenuto%}{%endblock%}
     
 </body>
 </html>
