--- a/templates/details.html
+++ b/templates/details.html
@@ -5,3 +5,13 @@
 {%block altriLink%}
 <a href="https://it.wikipedia.org/wiki/Pagina_principale" target="_blank">Wikipedia</a>
 {%endblock%}
+
+{%block contenuto%}
+<table>
+    <tr>
+        <th>Prodotto</th>
+        <th>Scaffale</th>
+        <th>Prezzo</th>
+    </tr>
+</table>
+{%endblock%}
